--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ Flask==1.1.1
 pathlib==1.0.1
 psycopg2==2.8.3
 python-dotenv==0.8.2
-requests==2.19.1
+requests>=2.20.0
 SQLAlchemy==1.3.4
 virtualenv==16.0.0
