--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 autopep8==1.4.4
 certifi==2018.4.16
+Flask-Login==0.4.1
 Flask==1.1.1
+httplib2==0.13.1
+oauth2client==4.1.3
 pathlib==1.0.1
 psycopg2==2.8.3
 python-dotenv==0.8.2
 requests>=2.20.0
 SQLAlchemy==1.3.4
 virtualenv==16.0.0
+Werkzeug==0.15.5
