chore: Changes language to match project reqs
Project created under assumption of following Lesson 4
Restaurant example. Required changes to match submission reqs
* Removes currency converter helper and imports
* Removes price from database, stylesheets, and templating
* Swaps out Restaurant for Category
* Swaps out MenuItem for Item
* Swaps out Menu for Listing

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 _DEV/
 .env
 *.pyc
-database/restaurantmenu.db-journal
-database/restaurantmenu.db
+database/catalog.db-journal
+database/catalog.db
 static/favicon.ico
 client_secrets.json
 assets
